k8s/eregister-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: eregister
  namespace: ingress-nginx
spec:
  replicas: 2
  selector:
    matchLabels:
      app: eregister
  template:
    metadata:
      labels:
        app: eregister
    spec:
      hostAliases:
      - ip: "192.168.204.129"
        hostnames:
        - "dbserver"
        - "redis-server"
      containers:
      - name: eregister
        imagePullPolicy: Never
        image: eregister
        ports:
        - containerPort: 9998
        - containerPort: 9997
#        volumeMounts:
#        - mountPath: /var/log/eregister
#          name: test-volume
#      volumes:
#      - name: test-volume
#        hostPath:
#          path: /home/hung/data/docker/docker-data/log/eregister
#          type: Directory
