k8s/eregister-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: eregister
  namespace: ingress-nginx
spec:
  selector:
    app: eregister
  ports:
  - name: http-port
    protocol: TCP
    targetPort: 9998
    port: 9998
#    nodePort: 9998
  - name: websocket-port
    protocol: TCP
    targetPort: 9997
    port: 9997
#    nodePort: 9997
#  type: NodePort
