k8s/eregister-ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: student-application
  namespace: ingress-nginx
  annotations:
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-name: "CLIENT_SESSION_ID"
    nginx.ingress.kubernetes.io/affinity-mode: persistent
#    nginx.ingress.kubernetes.io/session-cookie-name: "JSESSIONID"
#    nginx.ingress.kubernetes.io/ssl-redirect: "false"
#    nginx.ingress.kubernetes.io/session-cookie-path: /
#    nginx.ingress.kubernetes.io/upstream-hash-by: $remote_addr
spec:
  ingressClassName: nginx
  rules:
#  - host: eregister.com
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: student-application
            port:
              number: 9998
      - path: /websocket
        pathType: Prefix
        backend:
          service:
            name: student-application
            port:
              number: 9997
